# camera

./: .gitignore  CMakeLists.txt  README.md
include/: core.hpp  log.hpp  main.hpp  settings.hpp  utils.hpp
src/: core.cpp  main.cpp  settings.cpp  utils.cpp
